--- a/pelican-themes/bootstrap/templates/index.html
+++ b/pelican-themes/bootstrap/templates/index.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
+
 {% block content %}
+<div class='span12'><h2>blog posts on python, data science, and interesting things</h2></div>
 {% if articles %}
 {% for article in (articles_page.object_list if articles_page else articles) %}
-<div class='article'>
-<h4><a class="more" href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h4>
-<p>Date Published: {{article.date.year}}-{{article.date.month}}-{{article.date.day}}</p>
-	<div class="summary">Summary: {{article.summary }} <br/>
+<div class='article span12'>
+<h2><a class="more" href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
+	<div class="summary"><b>Date Published:</b> {{article.date.strftime('%Y-%m-%d')}}<br/><b>Summary:</b> {{article.summary }} <br/>
 		<a class="btn primary xsmall" href="{{ SITEURL }}/{{ article.url }}">more…></a>
 	</div>
+	<br/>
 </div>	
 {% endfor %}
 {%endif%}
