--- a/pelican-themes/bootstrap/templates/article.html
+++ b/pelican-themes/bootstrap/templates/article.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block indextitle %}{% endblock %}
 {% block content %}
-	<div class='article'>
+	<div class='article span16'>
 		<div class="page-header"><h1>{{ article.title }}</h1></div>
 		<div class="well small">{% include "metadata.html" %}</div>
 		<div>{{ article.content }}</div>
