--- a/pelican-themes/bootstrap/templates/base.html
+++ b/pelican-themes/bootstrap/templates/base.html
@@ -87,7 +87,7 @@
 		</div>{% endblock %}
 			{% block content %}{% endblock %}
 		<footer>
-		  <p>Powered by <a href="http://getpelican.com/">Pelican</a>. Theme based on <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>.</p>
+		  <p>Powered by <a href="http://getpelican.com/">Pelican</a>.</p>
 		  <p>&copy; {{ AUTHOR }}</p>
 		</footer>
 	  </div>
